--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -14,7 +14,14 @@
 <table>
   <% for (var i in quizzes) { %>        
      <tr>
-           
+              <td>
+          <% var quiz = quizzes[i]; %>      
+          <% if (quizzes[i].Attachment) { %>
+             <img src="<%= quizzes[i].Attachment.url %>" width="50px" />
+          <% } else { %> 
+             <img src="/imgs/question.png" width="50px" />
+          <% } %> 
+        </td>
       
         <td>
            <a href="/quizzes/<%= quizzes[i].id %>"><%= quizzes[i].question %></a>
